@@ -1,2 +1,1 @@
-/home/akhe/vscp_software/src/vscp/drivers/level2/lmsensors/linux/lmsensors.cpp=/home/akhe/vscp_software/src/vscp/drivers/level2/lmsensors/linux#-g -O2 -D__LINUX__ -fPIC -I/usr/local/lib/wx/include/gtk2-unicode-release-2.8 -I/usr/local/include/wx-2.8 -D_FILE_OFFSET_BITS=64 -D_LARGE_FILES -D__WXGTK__ -D__LINUX__ -fPIC -c -o lmsensors.o lmsensors.cpp
-/home/akhe/vscp_software/src/vscp/drivers/level2/lmsensors/linux/vscp2drv_lmsensors.cpp=/home/akhe/vscp_software/src/vscp/drivers/level2/lmsensors/linux#-g -O2 -D__LINUX__ -fPIC -I/usr/local/lib/wx/include/gtk2-unicode-release-2.8 -I/usr/local/include/wx-2.8 -D_FILE_OFFSET_BITS=64 -D_LARGE_FILES -D__WXGTK__ -D__LINUX__ -fPIC -c -o vscp2drv_lmsensors.o vscp2drv_lmsensors.cpp
+/home/akhe/vscp_software/src/vscp/common/vscphelper.cpp=/home/akhe/vscp_software/src/vscp/drivers/level2/lmsensors/linux#-g -O2 -D__LINUX__ -fPIC -I/usr/local/lib/wx/include/gtk2-unicode-release-2.8 -I/usr/local/include/wx-2.8 -D_FILE_OFFSET_BITS=64 -D_LARGE_FILES -D__WXGTK__ -D__LINUX__ -fPIC -c -o ../../../../common/vscphelper.o ../../../../common/vscphelper.cpp
